@@ -91,9 +91,9 @@ class Parser(docutils.parsers.Parser):
           ['--pep-references'],
           {'action': 'store_true', 'validator': frontend.validate_boolean}),
          ('Base URL for PEP references '
-          '(default "http://www.python.org/dev/peps/").',
+          '(default "https://www.python.org/dev/peps/").',
           ['--pep-base-url'],
-          {'metavar': '<URL>', 'default': 'http://www.python.org/dev/peps/',
+          {'metavar': '<URL>', 'default': 'https://www.python.org/dev/peps/',
            'validator': frontend.validate_url_trailing_slash}),
          ('Template for PEP file part of URL. (default "pep-%04d")',
           ['--pep-file-url-template'],
@@ -101,9 +101,9 @@ class Parser(docutils.parsers.Parser):
          ('Recognize and link to standalone RFC references (like "RFC 822").',
           ['--rfc-references'],
           {'action': 'store_true', 'validator': frontend.validate_boolean}),
-         ('Base URL for RFC references (default "http://tools.ietf.org/html/").',
+         ('Base URL for RFC references (default "https://tools.ietf.org/html/").',
           ['--rfc-base-url'],
-          {'metavar': '<URL>', 'default': 'http://tools.ietf.org/html/',
+          {'metavar': '<URL>', 'default': 'https://tools.ietf.org/html/',
            'validator': frontend.validate_url_trailing_slash}),
          ('Set number of spaces for tab expansion (default 8).',
           ['--tab-width'],
