@@ -137,8 +137,8 @@ footnote~references\DUfootnotemark{footnote-reference-1}{footnote-1}{*},\\
 citation~references~(\hyperlink{cit2002}{[CIT2002]}),~and~more.\\
 ~\\
 ~~~Here~are~some~explicit~interpreted~text~roles:\\
-a~PEP~reference~(\href{http://www.python.org/dev/peps/pep-0287}{PEP~287}),\\
-an~RFC~reference~(\href{http://tools.ietf.org/html/rfc2822.html}{RFC~2822}),\\
+a~PEP~reference~(\href{https://www.python.org/dev/peps/pep-0287}{PEP~287}),\\
+an~RFC~reference~(\href{https://tools.ietf.org/html/rfc2822.html}{RFC~2822}),\\
 an~abbreviation~(\DUrole{abbreviation}{abb.}),~an~acronym~(\DUrole{acronym}{reST}),\\
 code~(\texttt{\DUrole{code}{print~\textquotedbl{}hello~world\textquotedbl{}}}),\\
 maths~$\sin^2(x)$,\\
