@@ -45,7 +45,7 @@ to templates.  DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 </tr>
 <tr class="field"><th class="field-name">Type:</th><td class="field-body">Standards Track</td>
 </tr>
-<tr class="field"><th class="field-name">Content-Type:</th><td class="field-body"><a class="reference external" href="http://www.python.org/dev/peps/pep-0012">text/x-rst</a></td>
+<tr class="field"><th class="field-name">Content-Type:</th><td class="field-body"><a class="reference external" href="https://www.python.org/dev/peps/pep-0012">text/x-rst</a></td>
 </tr>
 <tr class="field"><th class="field-name">Created:</th><td class="field-body">01-Jun-2001</td>
 </tr>
