@@ -255,8 +255,8 @@ They are transformed from section titles after parsing.</comment>
                 <target anonymous="1" ids="target-1" refuri="http://www.python.org/"></target>
                 <target anonymous="1" ids="target-2" refuri="https://docutils.sourceforge.io/"></target>
                 <paragraph>The default role for interpreted text is <title_reference>Title Reference</title_reference>.  Here are
-                    some explicit interpreted text roles: a PEP reference (<reference refuri="http://www.python.org/dev/peps/pep-0287">PEP 287</reference>); an
-                    RFC reference (<reference refuri="http://tools.ietf.org/html/rfc2822.html">RFC 2822</reference>); an abbreviation (<abbreviation>abb.</abbreviation>), an acronym
+                    some explicit interpreted text roles: a PEP reference (<reference refuri="https://www.python.org/dev/peps/pep-0287">PEP 287</reference>); an
+                    RFC reference (<reference refuri="https://tools.ietf.org/html/rfc2822.html">RFC 2822</reference>); an abbreviation (<abbreviation>abb.</abbreviation>), an acronym
                     (<acronym>reST</acronym>), code (<literal classes="code">print "hello world"</literal>); a <subscript>subscript</subscript>;
                     a <superscript>superscript</superscript> and explicit roles for <title_reference>Docutils</title_reference>'
                     <emphasis>standard</emphasis> <strong>inline</strong> <literal>markup</literal>.</paragraph>
