@@ -30,20 +30,20 @@ and RFC 2822 (which obsoletes RFC822 and RFC-733).
 <document source="test data">
     <paragraph>
         See \n\
-        <reference refuri="http://www.python.org/dev/peps/pep-0287">
+        <reference refuri="https://www.python.org/dev/peps/pep-0287">
             PEP 287
          (
-        <reference refuri="http://www.python.org/dev/peps/pep-0287">
+        <reference refuri="https://www.python.org/dev/peps/pep-0287">
             pep-0287.txt
         ),
         and \n\
-        <reference refuri="http://tools.ietf.org/html/rfc2822.html">
+        <reference refuri="https://tools.ietf.org/html/rfc2822.html">
             RFC 2822
          (which obsoletes \n\
-        <reference refuri="http://tools.ietf.org/html/rfc822.html">
+        <reference refuri="https://tools.ietf.org/html/rfc822.html">
             RFC822
          and \n\
-        <reference refuri="http://tools.ietf.org/html/rfc733.html">
+        <reference refuri="https://tools.ietf.org/html/rfc733.html">
             RFC-733
         ).
 """],
@@ -61,31 +61,31 @@ RFC
     <paragraph>
         References split across lines:
     <paragraph>
-        <reference refuri="http://www.python.org/dev/peps/pep-0287">
+        <reference refuri="https://www.python.org/dev/peps/pep-0287">
             PEP
             287
     <paragraph>
-        <reference refuri="http://tools.ietf.org/html/rfc2822.html">
+        <reference refuri="https://tools.ietf.org/html/rfc2822.html">
             RFC
             2822
 """],
 ["""\
 Test PEP-specific implicit references before a URL:
 
-PEP 287 (http://www.python.org/dev/peps/pep-0287), RFC 2822.
+PEP 287 (https://www.python.org/dev/peps/pep-0287), RFC 2822.
 """,
 """\
 <document source="test data">
     <paragraph>
         Test PEP-specific implicit references before a URL:
     <paragraph>
-        <reference refuri="http://www.python.org/dev/peps/pep-0287">
+        <reference refuri="https://www.python.org/dev/peps/pep-0287">
             PEP 287
          (
-        <reference refuri="http://www.python.org/dev/peps/pep-0287">
-            http://www.python.org/dev/peps/pep-0287
+        <reference refuri="https://www.python.org/dev/peps/pep-0287">
+            https://www.python.org/dev/peps/pep-0287
         ), \n\
-        <reference refuri="http://tools.ietf.org/html/rfc2822.html">
+        <reference refuri="https://tools.ietf.org/html/rfc2822.html">
             RFC 2822
         .
 """],
